--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Mono&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     /* border: white dashed 1px; */
 }
 body{
-    font-family: sans-serif;
+    font-family: 'Roboto Mono', monospace;
     overflow-x: hidden;
     height:300vh;
     background-color: rgb(34, 43, 63);
     color:white;
 }
 
-/* ---------------------NAVBAR--------------------- */
+/* -------------------- NAVBAR --------------------- */
 nav{
     display: flex;
-    background-color:black;
+    background-color: rgb(26, 33, 48);
     justify-content: space-around;
     padding: 20px;
     color: rgb(21, 233, 230);
@@ -35,28 +37,34 @@ nav ul{
     display:flex;
     justify-content: center;
     font-family: 'roboto' sans-serif;
-    background-color:deepskyblue;
+    background:linear-gradient(45deg, deepskyblue, deeppink);
     color: white;
     padding: 10px;
     border-radius: 5px 0 5px 0;
     animation:logoanimation 2s infinite;
+    z-index: 0;
 }
 nav a{
-    color: white;
+    color: rgb(96, 116, 160);
     text-decoration:none;
     padding: 5px;
-    border: white solid 3px;
     border-radius: 5px 0 5px 0;
 }
 nav a:hover{
-    background-color: deepskyblue;
+    background: linear-gradient(45deg,deepskyblue,deeppink);
     letter-spacing: 3px;
+    color: white;
 }
 nav a:active{
-    background-color: grey;
-    border: none;
+    background: grey;
 }
-/* --------------HAMBURGER MENU-------------- */
+/* -------------------- PENUTUP NAVBAR --------------------- */
+
+
+
+
+
+/* -------------------- HAMBURGER MENU --------------------- */
 .menu-toggle{
     display:none;
     flex-direction: column;
@@ -72,7 +80,8 @@ nav a:active{
     top:-3px;
     opacity: 0;
     cursor :pointer;
-    z-index: 2;
+
+    z-index: 4;
 
 }
 .menu-toggle span{
@@ -81,6 +90,7 @@ nav a:active{
     height:3px;
     background-color:deepskyblue;
     transition: all 0.4s;
+    z-index: 3;
 }
 /* ----------HAMBURGER MENU ANIMATION---------- */
 .menu-toggle span:nth-child(2){
@@ -132,6 +142,9 @@ article{
     width:50%;
     margin-top: 30px;
 }
+.profile-wrapper p{
+    text-align: center;
+}
 .profile-img{
     background-image: url(aset/profile-img.jpg);
     width:200px;
@@ -166,10 +179,9 @@ article{
 .service{
     text-align: center;
     width:30%;
-    background-color:black;
+    background-color: rgb(34, 43, 63);
     padding: 20px;
     border-radius: 20px 0 20px 0;
-    height:130%;
     display:flex;
     flex-flow: column nowrap;
     justify-content:center;
@@ -206,13 +218,53 @@ article{
 }
 .vector-img:hover{
     animation:galleryanimation 0.3s forwards;
+    cursor:pointer;
+}
+.vector-img:active{
+    filter:contrast(120%) saturate(120%);
 }
 /* GALLERY ANIMATION */
 @keyframes galleryanimation{
     0%{}
     100%{transform:rotate(360deg) scale(1.2);}
 }
-
+/* -------------------CONTACT------------------- */
+.contact-container{
+    display:flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 100vh;
+}
+.contact-wrapper{
+    display:flex;
+    flex-flow: column nowrap;
+    width:50%;
+    height:50vh;
+    justify-content: space-around;
+    align-items: center;
+}
+.contact-img{
+    width:200px;
+    height:200px;
+}
+.social-media{
+    display:flex;
+    width:70%;
+    justify-content: space-between;
+}
+.sosmed-img{
+    width:40px;
+    height:40px;
+}
+.sosmed-img:hover{
+    transform:scale(1.2);
+    transition:0.2s;
+}
+.sosmed-img:active{
+    filter:grayscale(100%);
+}
 /* -------------------FOOTER------------------- */
 footer{
     display:flex;
@@ -221,7 +273,7 @@ footer{
     justify-content:space-around;
     align-items: center;
     padding:20px;
-    background-color: black;
+    background-color: rgb(26, 33, 48);
     margin-top: 50px;
 }
 footer h4{
@@ -249,7 +301,7 @@ footer h4{
         height:80px;
     }
     nav ul{
-        background:linear-gradient(45deg, deepskyblue, darkblue);
+        background-color: rgb(26, 33, 48);
         position:absolute;
         right: 0;
         top: 0;
@@ -257,7 +309,7 @@ footer h4{
         height:100vh;
         align-items: center;
         justify-content: space-evenly;
-        z-index: -1;
+        z-index: 1;
         width:40%;
         transform:translateX(100%);
         transition: all 1s;
@@ -294,6 +346,7 @@ footer h4{
     /* GALLERY */
     .gallery-container{
         height:auto;
+        margin-top: 15px;
 
     }
     .gallery-wrapper{
@@ -304,6 +357,9 @@ footer h4{
     .vector-img{
         width:120px;
         height:120px;
+    }
+    .contact-wrapper{
+        width:80%;
     }
 }
 
